--- a/index.html
+++ b/index.html
@@ -4,84 +4,101 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.png">
-  <title>Aiser</title>
-  <link rel="stylesheet" href="css/plugins.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preload" href="css/fonts/thicccboi.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="shortcut icon" href="img/favicon-32x32.png">
+  <!-- Primary Meta Tags -->
+  <title>Home | Asier Metals</title>
+  <meta name="title" content="Home | Asier Metals">
+  <meta name="description" content="We trade Ferrous & Non-Ferrous Metals. We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally.">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://aiser.vercel.app/">
+  <meta property="og:title" content="Home | Asier Metals">
+  <meta property="og:description" content="We trade Ferrous & Non-Ferrous Metals. We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally.">
+  <meta property="og:image" content="">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://aiser.vercel.app/">
+  <meta property="twitter:title" content="Home | Asier Metals">
+  <meta property="twitter:description" content="We trade Ferrous & Non-Ferrous Metals. We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally.">
+  <meta property="twitter:image" content="">
+  <link rel="stylesheet" href="./css/plugins.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/fonts/thicccboi.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
     <header class="wrapper bg-dark">
-        <nav class="navbar center-nav transparent navbar-expand-lg navbar-dark">
-          <div class="container flex-lg-row flex-nowrap align-items-center">
-            <div class="navbar-brand w-100"><a href="index.html"><img src="img/logo-dark.png" srcset="img/logo-dark.png" class="logo logo-dark" alt="Logo" /><img src="img/logo-light.png" srcset="img/logo-light.png" class="logo logo-light" alt="Logo" /></a></div>
-            <div class="navbar-collapse offcanvas-nav">
-              <div class="offcanvas-header d-lg-none d-xl-none">
-                <a href="index.html"><img src="img/logo-light.png" srcset="img/logo-light.png" alt="Logo" /></a>
-                <button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
-              </div>
-              <ul class="navbar-nav me-7">
-                <li class="nav-item"><a class="nav-link scroll" href="#our-client">Our Clients</a>
-                <li class="nav-item"><a class="nav-link scroll" href="#who-we-are">Who We Are</a>
-                <li class="nav-item"><a class="nav-link scroll" href="#what-we-do">What We Do</a>
-                </li>
-              </ul>
-              <!-- /.navbar-nav -->
+      <nav class="navbar center-nav transparent navbar-expand-lg navbar-dark">
+        <div class="container flex-lg-row flex-nowrap align-items-center">
+          <div class="navbar-brand w-100"><a href="index.html"><img src="img/logo-dark.png" srcset="img/logo-dark.png" class="logo logo-dark" alt="Logo" /><img src="img/logo-light.png" srcset="img/logo-light.png" class="logo logo-light" alt="Logo" /></a></div>
+          <div class="navbar-collapse offcanvas-nav">
+            <div class="offcanvas-header d-lg-none d-xl-none">
+              <a href="index.html"><img src="img/logo-light.png" class="logo-sidenav" srcset="img/logo-light.png" alt="Logo" /></a>
+              <button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
             </div>
-            <!-- /.navbar-collapse -->
-            <div class="navbar-other d-flex ms-auto">
-              <ul class="navbar-nav flex-row align-items-center ms-auto" data-sm-skip="true">
-                <li class="nav-item d-none d-md-block">
-                  <a href="#" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-03">Contact Us</a>
-                </li>
-                <li class="nav-item d-lg-none">
-                  <div class="navbar-hamburger"><button class="hamburger animate plain" data-toggle="offcanvas-nav"><span></span></button></div>
-                </li>
-              </ul>
-              <!-- /.navbar-nav -->
-            </div>
-            <!-- /.navbar-other -->
+            <ul class="navbar-nav me-7">
+              <li class="nav-item"><a class="nav-link scroll" href="#our-client">Our Clients</a>
+              <li class="nav-item"><a class="nav-link scroll" href="#who-we-are">Who We Are</a>
+              <li class="nav-item"><a class="nav-link scroll" href="#what-we-do">What We Do</a>
+              </li>
+            </ul>
+            <!-- /.navbar-nav -->
           </div>
-          <!-- /.container -->
-        </nav>
-        <!-- /.navbar -->
-        <section class="wrapper bg-dark angled lower-start">
-            <div class="container pt-7 pt-md-11 pb-8">
-              <div class="row gx-0 gy-10 align-items-center">
-                <div class="col-lg-6" data-cues="slideInDown" data-group="page-title" data-delay="600">
-                  <h1 class="display-1 text-white mb-4 text-white">We trade in <br /><span class="typer text-primary text-nowrap" data-delay="100" data-delim=":" data-words="Refined Metals:Ferro Alloys:Noble Alloys:Metal Scrap:Precious Metals"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
-                  <p class="lead fs-24 lh-sm text-white mb-7 pe-md-18 pe-lg-0 pe-xxl-15">We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally.</p>
-                </div>
-                <!-- /column -->
-                <div class="col-lg-5 offset-lg-1 mb-n18" data-cues="slideInDown">
-                  <div class="basic-slider owl-carousel dots-over shadow-lg owl-loaded owl-drag" data-nav="true" data-margin="5">
-                    <div class="owl-stage-outer owl-height" style="height: 442.391px;">
-                      <div class="owl-stage" style="transform: translate3d(-1402px, 0px, 0px); transition: all 0.25s ease 0s; width: 3273px;">
-                        <div class="owl-item cloned">
-                          <div class="item">
-                            <img src="img/photos/heroImg.png"  class="rounded" alt="backgroun-image">
-                          </div>
-                        </div>
-                        <div class="owl-item cloned">
-                          <div class="item">
-                            <img src="img/photos/heroImg1.png"  class="rounded" alt="backgroun-image">
-                          </div>
-                        </div>
-                        <div class="owl-item">
-                          <div class="item">
-                            <img src="img/photos/heroImg2.png"  class="rounded" alt="backgroun-image">
-                          </div>
-                        </div>
-                  <!-- /div -->
-                </div>
-                <!-- /column -->
-              </div>
-              <!-- /.row -->
+          <!-- /.navbar-collapse -->
+          <div class="navbar-other d-flex ms-auto">
+            <ul class="navbar-nav flex-row align-items-center ms-auto" data-sm-skip="true">
+              <li class="nav-item d-none d-md-block">
+                <a href="#" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-03">Contact Us</a>
+              </li>
+              <li class="nav-item d-lg-none">
+                <div class="navbar-hamburger"><button class="hamburger animate plain" data-toggle="offcanvas-nav"><span></span></button></div>
+              </li>
+            </ul>
+            <!-- /.navbar-nav -->
+          </div>
+          <!-- /.navbar-other -->
+        </div>
+        <!-- /.container -->
+      </nav>
+      <!-- /.navbar -->
+      <section class="wrapper bg-dark angled lower-start">
+        <div class="container pt-7 pt-md-11 pb-8">
+          <div class="row gx-0 gy-10 align-items-center">
+            <div class="col-lg-6" data-cues="slideInDown" data-group="page-title" data-delay="600">
+              <h1 class="display-1 text-white mb-4 text-white">We trade in <br /><span class="typer text-primary text-nowrap" data-delay="100" data-delim=":" data-words="Refined Metals:Ferro Alloys:Noble Alloys:Metal Scrap:Precious Metals"></span><span class="cursor text-primary" data-owner="typer"></span></h1>
+              <p class="lead fs-24 lh-sm text-white mb-7 pe-md-18 pe-lg-0 pe-xxl-15">We are well established in the metal trading ecosystem, with excellent working relationships with the most prominent players globally.</p>
             </div>
-            <!-- /.container -->
-        </section>
-
+            <!-- /column -->
+            <div class="col-lg-5 offset-lg-1 mb-n18" data-cues="slideInDown">
+              <div class="basic-slider owl-carousel dots-over shadow-lg owl-loaded owl-drag" data-nav="true" data-margin="5">
+                <div class="owl-stage-outer owl-height" style="height: 442.391px;">
+                  <div class="owl-stage" style="transform: translate3d(-1402px, 0px, 0px); transition: all 0.25s ease 0s; width: 3273px;">
+                    <div class="owl-item cloned">
+                      <div class="item">
+                        <img src="img/photos/heroImg.png"  class="rounded" alt="backgroun-image">
+                      </div>
+                    </div>
+                    <div class="owl-item cloned">
+                      <div class="item">
+                        <img src="img/photos/heroImg2.png"  class="rounded" alt="backgroun-image">
+                      </div>
+                    </div>
+                    <div class="owl-item">
+                      <div class="item">
+                        <img src="img/photos/heroImg1.png"  class="rounded" alt="backgroun-image">
+                      </div>
+                    </div>
+                    <!-- /div -->
+                  </div>
+                  <!-- /column -->
+                </div>
+                <!-- /.row -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.container -->
+      </section>
     </header>
     <section id="our-client" class="wrapper bg-light">
       <div class="container py-14 pt-18 pb-12">
@@ -126,6 +143,14 @@
             <!--/column -->
             <div class="col-4 col-md-2">
               <figure class="px-5 px-md-0 px-lg-2 px-xl-3 px-xxl-4"><img src="img/brands/clientlogo10.png" class="clients-logo" alt="clients-logo" /></figure>
+            </div>
+            <!--/column -->
+            <div class="col-4 col-md-2">
+              <figure class="px-5 px-md-0 px-lg-2 px-xl-3 px-xxl-4"><img src="img/brands/clientlogo11.png" class="clients-logo" alt="clients-logo" /></figure>
+            </div>
+            <!--/column -->
+            <div class="col-4 col-md-2">
+              <figure class="px-5 px-md-0 px-lg-2 px-xl-3 px-xxl-4"><img src="img/brands/clientlogo12.png" class="clients-logo" alt="clients-logo" /></figure>
             </div>
             <!--/column -->
           </div>
@@ -184,8 +209,8 @@
               <div class="col-md-5 offset-md-1 align-self-end">
                 <div class="card bg-pale-yellow">
                   <div class="card-body">
-                    <img src="img/icons/briefcase-2.svg" class="svg-inject icon-svg text-primary" alt="icon" />
-                    <h4>Refine Metals</h4>
+                    <img src="img/icons/briefcase-2.svg" class="svg-inject icon-svg text-primary mb-3" alt="icon" />
+                    <h4>Refined </br>Metals</h4>
                   </div>
                   <!--/.card-body -->
                 </div>
@@ -195,8 +220,8 @@
               <div class="col-md-6 align-self-end">
                 <div class="card bg-pale-red">
                   <div class="card-body">
-                    <img src="img/icons/link.svg" class="svg-inject icon-svg text-primary" alt="icon" />
-                    <h4>Metal Scrap</h4>
+                    <img src="img/icons/link.svg" class="svg-inject icon-svg text-primary mb-3" alt="icon" />
+                    <h4>Metal </br> Scrap</h4>
                     </div>
                   <!--/.card-body -->
                 </div>
@@ -217,7 +242,7 @@
               <div class="col-md-6 align-self-start">
                 <div class="card bg-pale-primary">
                   <div class="card-body">
-                    <img src="img/icons/analytics.svg" class="svg-inject icon-svg text-primary" alt="icon" />
+                    <img src="img/icons/analytics.svg" class="svg-inject icon-svg text-primary mb-3" alt="icon" />
                     <h4>Market </br> Hedging Services</h4>
                   </div>
                   <!--/.card-body -->
@@ -281,7 +306,7 @@
               <div class="col-md-4">
                 <div class="widget">
                   <h4 class="widget-title text-primary">E-mail</h4>
-                  <p><a href="mailto:info@asier.in" class="link-body">info@asier.in</a> <br class="d-none d-md-block" /><a href="mailto:finance@asier.in" class="link-body">finance@asier.in</a></p>
+                  <p><a href="mailto:hello@asier.in" class="link-body">hello@asier.in</a></p>
                 </div>
                 <!-- /.widget -->
               </div>
@@ -292,9 +317,9 @@
             <nav class="nav social justify-content-center">
               <!-- <a href="#"><i class="uil uil-twitter"></i></a> -->
               <!-- <a href="#"><i class="uil uil-facebook-f"></i></a> -->
-              <a data-bs-toggle="modal" data-bs-target="#modal-03"><i class="uil uil-fast-mail-alt"></i></a>
+              <a data-bs-toggle="modal" data-bs-target="#modal-03"><i class="uil uil-envelope-alt text-primary"></i></a>
               <!-- <a href="#"><i class="uil uil-instagram"></i></a> -->
-              <a href="https://www.linkedin.com/company/asier-metals-private-limited/"><i class="uil uil-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/asier-metals-private-limited/" target="_blank"><i class="uil uil-linkedin"></i></a>
             </nav>
             <!-- /.social -->
           </div>
@@ -310,14 +335,14 @@
         <div class="modal-content text-center">
           <div class="modal-body">
             <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            <form class="contact-form" method="post" action="php/contact.php" novalidate="true">
+            <form class="contact-form" method="post" action="php/mail_handler.php" novalidate="true">
               <div class="messages"></div>
               <div class="controls">
                 <div class="row gx-4">
                   <div class="col-md-6">
                     <div class="form-label-group mb-4">
-                      <input id="form_name" type="text" name="name" class="form-control" placeholder="Jane" required="required" data-error="First Name is required.">
-                      <label for="form_name">First Name *</label>
+                      <input id="form_name" type="text" name="fullname" class="form-control" placeholder="Jane" required="required" data-error="First Name is required.">
+                      <label for="form_name">Full Name *</label>
                       <div class="help-block with-errors"></div>
                     </div>
                   </div>
@@ -364,8 +389,9 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/theme.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="./js/plugins.js"></script>
+  <script src="./js/theme.js"></script>
 </body>
 
 </html>
