--- a/index.html
+++ b/index.html
@@ -335,44 +335,8 @@
         <div class="modal-content text-center">
           <div class="modal-body">
             <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            <form class="contact-form" method="post" action="php/mail_handler.php" novalidate="true">
-              <div class="messages"></div>
-              <div class="controls">
-                <div class="row gx-4">
-                  <div class="col-md-6">
-                    <div class="form-label-group mb-4">
-                      <input id="form_name" type="text" name="fullname" class="form-control" placeholder="Jane" required="required" data-error="First Name is required.">
-                      <label for="form_name">Full Name *</label>
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <!-- /column -->
-                  <div class="col-md-6">
-                    <div class="form-label-group mb-4">
-                      <input id="form_email" type="email" name="email" class="form-control" placeholder="jane.doe@example.com" required="required" data-error="Valid email is required.">
-                      <label for="form_email">Email *</label>
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <!-- /column -->
-
-                  <div class="col-12">
-                    <div class="form-label-group mb-4">
-                      <textarea id="form_message" name="message" class="form-control" placeholder="Your message" rows="8" required="required" data-error="Message is required."></textarea>
-                      <label for="form_message">Message *</label>
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <!-- /column -->
-                  <div class="col-12 text-start">
-                    <input type="submit" class="btn btn-outline-primary rounded-pill mb-3" value="Send message">
-                  </div>
-                  <!-- /column -->
-                </div>
-                <!-- /.row -->
-              </div>
-              <!-- /.controls -->
-            </form>
+              <h1 class="fs-25">We'd love to hear from you</h1>
+              <p class="fs-20"> Reach out to us at <span class="fw-bold"> hello@aiser.in</span>, and we will get back to you <br> as soon as possible</p>
           </div>
           <!--/.modal-content -->
         </div>
@@ -387,6 +351,7 @@
       <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
     </svg>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
